--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity android:name=".CreateQuizActivity"
             android:label="Add Questions">
         </activity>
+        <activity android:name=".StartQuizActivity"
+            android:label="Start Quiz">
+        </activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".RagisterActivity" />
         <activity android:name=".LoginActivity">
