--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.myassignment">
+    package="com.MobileDevTermProj">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -26,19 +26,19 @@
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat"
             tools:ignore="DuplicateActivity" />
-        <activity android:name=".SelectQuizActivity"></activity>
-        <activity android:name=".CreateQuizActivity"
+        <activity android:name="com.MobileDevTermProj.SelectQuizActivity"></activity>
+        <activity android:name="com.MobileDevTermProj.CreateQuizActivity"
             android:label="Add Questions">
         </activity>
-        <activity android:name=".StartQuizActivity"
+        <activity android:name="com.MobileDevTermProj.StartQuizActivity"
             android:label="Start Quiz">
         </activity>
-        <activity android:name=".ResultActivity"
+        <activity android:name="com.MobileDevTermProj.ResultActivity"
             android:label="Result">
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".RagisterActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name="com.MobileDevTermProj.MainActivity"></activity>
+        <activity android:name="com.MobileDevTermProj.RagisterActivity" />
+        <activity android:name="com.MobileDevTermProj.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
